# ZeroUI

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Source/: CMakeLists.txt
Source/Test/: CMakeLists.txt  Main.cpp
Source/ZeroUI/: CMakeLists.txt  Core.h  PCH.h  ZConfig.h  ZConfig.h.in
Source/ZeroUI/ApplicationCore/: GenericApplicationMessageHandler.h  GenericWindowDefinition.h
Source/ZeroUI/ApplicationCore/GenericPlatform/: GenericApplication.h  GenericApplicationMessageHandler.h  GenericPlatformApplicationMisc.h  GenericWindow.cpp  GenericWindow.h  ICursor.h
Source/ZeroUI/ApplicationCore/Windows/: WindowsApplication.cpp  WindowsApplication.h  WindowsCursor.cpp  WindowsCursor.h  WindowsPlatformApplicationMisc.cpp  WindowsPlatformApplicationMisc.h  WindowsWindow.cpp  WindowsWindow.h
Source/ZeroUI/Core/: Delegate.h  HashUtil.h  Log.cpp  Log.h  ZConfig.h  ZConfig.h.in
Source/ZeroUI/Core/Containers/: EnumAsBytes.h
Source/ZeroUI/Core/InputCore/: InputCoreTypes.cpp  InputCoreTypes.h
Source/ZeroUI/Core/Math/: AABB.h  IntPoint.h  Ray.h  TransformCalculus.h  TransformCalculus2D.h  ZMath.h
Source/ZeroUI/Core/Misc/: Attribute.h  EnumClassFlags.h
Source/ZeroUI/Core/Templates/: Identity.h
Source/ZeroUI/SlateCore/: SlotBase.cpp  SlotBase.h
Source/ZeroUI/SlateCore/Application/: SlateApplicationBase.cpp  SlateApplicationBase.h
Source/ZeroUI/SlateCore/Input/: Events.h
Source/ZeroUI/SlateCore/Layout/: BasicLayoutWidgetSlot.h  Children.h  ChildrenBase.h  FlowDirection.h  LayoutGeometry.h  Margin.h  PaintGeometry.h  SlteRect.h  Visibility.cpp  Visibility.h
(+30 files in other folders)
